# BEP028_BIDSprov

./: .codespellrc  .coverage  .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Launch_multiple_spm.py  Makefile  README.md  afni_default_proc.jsonld  afni_default_proc.sub_001  afni_default_proc_afni_branch.jsonld  bep028spec.md  code_of_conduct.md  context.json  contributing.md  dev-requirements.txt  fetch_nidmresults-examples  full.jsonld  how-to-encode.md  launch_multiple_spm.py  launch_parser_on_nidm.py  new_features.md  pyproject.toml  requirements.txt  spec_update_issue_template.md  test_fslmaths.html  test_fslmaths.jsonld  test_fslmaths_final.jsonld
.github/ISSUE_TEMPLATE/: bug_parser.yml  spec_update.md
.github/workflows/: SPM_test_on_nidmexamples.yml  integration_test.yml  (+2 more)
ISSUE_TEMPLATE/: spec_update_issue_template.md
bids_prov/: README.md  __init__.py  fsl_config.py  fsl_parser.py  merge.py  spm_config.py  spm_config.yml  spm_load_config.py  spm_parser.py  utils.py  visualize.py
examples/: context_2023_02_13_14h15m38s.txt  context_spm_2023_01_30_14h40m54s.txt  context_spm_2023_01_30_14h47m55s.txt  context_spm_2023_01_30_14h53m58s.txt
proposed_concise_ontology/: concise_ver-0010.ttl
results/: context_spm_2022_12_15_13h09m08s.txt  context_spm_2022_12_15_13h29m38s.txt  context_spm_2022_12_16_08h39m45s.txt  context_spm_2022_12_16_10h14m55s.txt  context_spm_2022_12_16_10h35m14s.txt  context_spm_2022_12_16_11h09m43s.txt  context_spm_2022_12_16_12h05m25s.txt  context_spm_2022_12_16_13h16m54s.txt  context_spm_2022_12_16_15h03m46s.txt  context_spm_2022_12_16_15h11m59s.txt  context_spm_2022_12_16_15h30m33s.txt  context_spm_2022_12_16_15h35m06s.txt  context_spm_2022_12_16_15h54m41s.txt  context_spm_2022_12_16_15h59m59s.txt  context_spm_2022_12_20_12h01m14s.txt  context_spm_2023_01_03_13h47m10s.txt  context_spm_2023_01_03_15h35m34s.txt  context_spm_2023_01_03_15h43m03s.txt  context_spm_2023_01_03_15h50m34s.txt  context_spm_2023_01_03_15h54m40s.txt  context_spm_2023_01_03_16h50m46s.txt  context_spm_2023_01_03_16h59m23s.txt  context_spm_2023_01_03_17h08m36s.txt  context_spm_2023_01_04_10h22m19s.txt  context_spm_2023_01_04_14h14m11s.txt  context_spm_2023_01_04_14h44m15s.txt  context_spm_2023_01_04_14h47m19s.txt  context_spm_2023_01_04_15h05m39s.txt  context_spm_2023_01_04_15h09m42s.txt  context_spm_2023_01_04_15h47m18s.txt  context_spm_2023_01_04_15h51m12s.txt  context_spm_2023_01_04_16h11m39s.txt  context_spm_2023_01_04_16h19m02s.txt  context_spm_2023_01_04_16h34m12s.txt  context_spm_2023_01_04_16h37m34s.txt  context_spm_2023_01_05_08h56m40s.txt  context_spm_2023_01_05_09h00m13s.txt  context_spm_2023_01_05_09h06m10s.txt  context_spm_2023_01_05_12h31m06s.txt  context_spm_2023_01_05_14h41m40s.txt  (+136 more)
(+819 files in other folders)
