[build-system]
requires = [
    "setuptools>=67.6.1, <67.7",
    "wheel"
    ]
build-backend = "setuptools.build_meta"

[project]
name = "bids_prov"
authors = [
    {name = "Camille Maumet"},
    {name = "Satrajit Ghosh"},
    {name = "Stefan Appelhoff"},
    {name = "Chris Markiewicz"},
    {name = "Yaroslav Halchenko"},
    {name = "Jean-Baptiste Poline"},
    {name = "Rémi Adon"},
    {name = "Hermann Courteille"},
    {name = "Thomas Betton"},
    {name = "Cyril Regan"},
    {name = "Boris Clénet"}
]
description = "BIDS extension proposal 28 : BIDS Provenance"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10, <3.11"
#keywords = ["one", "two"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "beautifulsoup4>=4.12.3,<4.13",
    "boutiques>=0.5.26,<0.6",
    "click>=8.1.7,<8.2",
    "deepdiff>=7.0.1,<7.1",
    "graphviz>=0.20.3,<0.21",
    "rdflib>=7.0.0,<7.1",
    "rdflib-jsonld>=0.6.2,<0.7",
    "prov>=2.0.0,<2.1",
    "pydot>=2.0.0,<2.1",
    "pyld>=2.0.4,<2.1",
    "pyyaml>=6.0.1,<6.1",
    "requests>=2.32.3,<2.33"
]

[project.optional-dependencies]
dev = [
    "black",
    "markdownify",
    "pre-commit",
    "pytest-cov"
]

[project.scripts]
bids_prov_visualizer = 'bids_prov.visualize:main'

[tool.setuptools]
py-modules = ["bids_prov.visualize"]
