[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bids_prov"
authors = [
    "Camille Maumet",
    "Satrajit Ghosh",
    "Stefan Appelhoff",
    "Chris Markiewicz",
    "Yaroslav Halchenko",
    "Jean-Baptiste Poline",
    "Rémi Adon",
    "Hermann Courteille",
    "Thomas Betton",
    "Cyril Regan",
    "Boris Clénet"
]
description = "BIDS extension proposal 28 : BIDS Provenance"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10, <3.11"
license = "CC-BY-4.0"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
include = ["bids_prov/visualize.py"]
exclude = ["bids_prov*"]

[tool.poetry.dependencies]
python = "^3.10.0"
beautifulsoup4 = "^4.12.3"
boutiques = "^0.5.26"
click = "^8.1.7"
deepdiff = "^7.0.1"
graphviz = "^0.20.3"
rdflib = "^7.0.0"
rdflib-jsonld = "^0.6.2"
prov = "^2.0.0"
pydot = "^2.0.0"
pyld = "^2.0.4"
pyyaml = "^6.0.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
markdownify = "^0.12.1"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
bids_prov_visualizer = "bids_prov.visualize:entry_point"
